# plebpool

./: .gitmodules  Cargo.toml  README.md  config.toml  flake.nix  stratum-message-generator.sh
docs/: architecture.md  hashrate-estimation.md  reward-distribution.md
src/: cli.rs  config.rs  main.rs
src/ecash/: config.rs  error.rs  mod.rs  service.rs
src/ecash/service/: handlers.rs  mod.rs
src/ln/: config.rs  service.rs
src/ln/service/: mod.rs
src/pool/: config.rs  mod.rs
src/pool/service/: downstream.rs  mod.rs  sv1_mining_channel_service.rs
stratum-message-generator/: downstream-setup-connection.json
