[package]
name = "plebpool"
author = "plebemineira <plebemineira@proton.me>"
version = "0.1.0"
edition = "2021"
license = "MIT + Apache-2.0"
repository = "https://github.com/plebemineira/plebpool"

[dependencies]

# Misc
async-trait = "0.1.77"
async-channel = "1.5.1"
axum = "0.6.18"
axum-macros = "0.3.7"
cln-rpc = "0.1.3"
config = { version = "0.13.3", features = ["toml"] }
dirs = "5.0.1"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rand = "0.8.5"
bitcoin_hashes = "0.12.0"
tower-http = { version = "0.4.1", features = ["cors"] }
bech32 = "0.9.1"
hex = "0.4.3"
axum-extra = { version = "0.7.4", features = ["cookie"] }
time = "0.3.22"
chrono = "0.4.26"
serde = "1.0.164"
serde_json = "1.0.96"
url = "2.4.0"

# CLI
clap = { version = "4.3.14", features = ["env", "default", "derive"]}

# error handling
anyhow = "1.0.71"

# bitcoin
bitcoin = { version = "0.30.0", features = ["no-std"] }
bip39 = { version = "2.0.0", features = ["rand_core"] }

# SV2
codec_sv2 = { version = "^1.0.1", features = ["noise_sv2"] }
network_helpers_sv2 = { version = "1.0.0", features =["with_tokio","with_buffer_pool"] }
roles_logic_sv2 = { version = "^1.0.0" }

# LN
ldk-node = "0.2.2"
