[package]
name = "plebpool"
author = "plebemineira <plebemineira@proton.me>"
version = "0.1.0"
edition = "2021"
license = "MIT + Apache-2.0"
repository = "https://github.com/plebemineira/plebpool"

[dependencies]

# CLI
clap = { version = "4.3.14", features = ["env", "default", "derive"]}
config = { version = "0.13.3", features = ["toml"] }

# error handling
anyhow = "1.0.71"

# bitcoin
bitcoin = { version = "0.30.0", features = ["no-std"] }
bip39 = { version = "2.0.0", features = ["rand_core"] }
bitcoin_hashes = "0.12.0"
bech32 = "0.9.1"

# SV2
codec_sv2 = { version = "^1.0.1", features = ["noise_sv2"] }
network_helpers_sv2 = { version = "1.0.0", features =["with_tokio","with_buffer_pool"] }
roles_logic_sv2 = { version = "^1.0.0" }

# LN
ldk-node = "0.2.2"

# Misc
async-channel = "1.5.1"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = "1.0.164"
serde_json = "1.0.96"
tower = "0.4.13"

[dev-dependencies]
tokio-test = "0.4"
tower-test = "0.4.0"